--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -2,7 +2,7 @@
 # Add items for each banner image in the carousel
 #
 # Images are expected to be located in `static/assets/img/`.
-- src: landing/background.jpg
+- src: landing/background2.jpg
   title: life is a road
 
 # - src: landing/header_two.jpg
