--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Konpax Trans
 description: Konpax Trans - Seriuos Transport Services
 keywords: konpax,transportation, logistics
-baseurl:  / # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
+baseurl:  # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: https://konpax.github.io/landing-page  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
