--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -2,8 +2,8 @@
 # Add items for each banner image in the carousel
 #
 # Images are expected to be located in `static/assets/img/`.
-- src: landing/background2.jpg
-  title: life is a road
+- src: landing/background_one.jpg
 
-# - src: landing/header_two.jpg
-#   title: second banner image
+- src: landing/background_two.jpg
+
+- src: landing/background_two.jpg
