Add description and disable some pages

--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -1,6 +1,5 @@
 # links section data
-- last_name: Name 1
-  first_name:
+- name: Konpax Trans SRL
   desc: CEO
   website: https://www.google.com
   email: ceo@google.com
